WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268497
[UnifiedPDF] Text annotations do not have blue background on hover
https://bugs.webkit.org/show_bug.cgi?id=268497
Summary
[UnifiedPDF] Text annotations do not have blue background on hover
Sammy Gill
Reported
2024-01-31 13:59:55 PST
When hovering over a text annotation, a blue background should appear indicating there is a text annotation underneath that can be interacted with
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-31 14:00:15 PST
<
rdar://problem/122041412
>
Sammy Gill
Comment 2
2024-02-02 18:17:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23795
EWS
Comment 3
2024-02-07 22:49:36 PST
Committed
274272@main
(8147bb3d60a3): <
https://commits.webkit.org/274272@main
> Reviewed commits have been landed. Closing PR #23795 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug